--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_DEFINITIONS(-Os -Wall --std=gnu11 -Wmissing-declarations -D_GNU_SOURCE)
 INCLUDE_DIRECTORIES(include)
 
 OPTION(EXAMPLE_PLUGINS "build example plugins" ON)
+OPTION(EXAMPLE_PLUGINS "build OpenWrt plugins" ON)
 
 FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
 
@@ -13,4 +14,5 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/freenetconfd)
 
 IF (EXAMPLE_PLUGINS)
   ADD_SUBDIRECTORY(examples)
+  ADD_SUBDIRECTORY(openwrt)
 ENDIF ()
