--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE_DIRECTORIES(include)
 
 OPTION(EXAMPLE_PLUGINS "build example plugins" OFF)
 OPTION(OPENWRT_PLUGINS "build OpenWrt plugins" OFF)
+OPTION(SYSREPO_PLUGINS "build sysrepo plugins" ON)
 
 FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
 
@@ -18,4 +19,8 @@ ENDIF ()
 
 IF (OPENWRT_PLUGINS)
   ADD_SUBDIRECTORY(openwrt)
+ENDIF ()
+
+IF (SYSREPO_PLUGINS)
+  ADD_SUBDIRECTORY(sysrepo)
 ENDIF ()
