fix installation path
Signed-off-by: Luka Perkov <luka.perkov@sartura.hr>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -36,7 +36,7 @@ INSTALL(
 		example_shopping_list
 		example_vehicle
 		example_choice
-	LIBRARY DESTINATION lib/
+	LIBRARY DESTINATION lib/freenetconfd/
 )
 
 INSTALL(
